--- a/index.html
+++ b/index.html
@@ -857,7 +857,7 @@
 "kotori,small/ bird"
 "konoaida,the other day/ recently"
 "konogoro,these days/ nowadays"
-"komakai,smal/ fin"
+"komakai,small/ fine"
 "gomi,rubbish"
 "komu,to be crowded"
 "kome,uncooked rice"
@@ -2689,4 +2689,5 @@
 </body>
 
 </html>
+
 
