--- a/index.html
+++ b/index.html
@@ -177,15 +177,15 @@
 
   <main>
     <div class="tabs">
-      <button id="tabLearn" class="tab-btn active">Learn Words</button>
-      <button id="tabQuiz" class="tab-btn">Take Quiz</button>
+      <button id="tabLearn" class="tab-btn active">Learn Vocab</button>
+      <button id="tabQuiz" class="tab-btn">Vocab Quiz</button>
       <button id="tabMega" class="tab-btn">Mega Quiz</button>
       <button id="tabHira" class="tab-btn">Learn Hiragana</button>
       <button id="tabKata" class="tab-btn">Learn Katakana</button>
       <button id="tabKanaQuiz" class="tab-btn">Kana Quiz</button>
     </div>
 
-    <!-- LEARN WORDS -->
+    <!-- LEARN VOCAB -->
     <section id="panelLearn">
       <div class="panel">
         <div class="flex">
@@ -2689,5 +2689,6 @@
 </body>
 
 </html>
+
 
 
