--- a/index.html
+++ b/index.html
@@ -162,9 +162,9 @@
   .qtitle .kana  { display:inline; font-size:20px; font-weight:700; color:#1e3a8a; margin-left:6px; }
   .qtitle .romaji strong { font-weight:inherit; }
 
-  /* Vertical stacking of Romaji and Kana in options (keep as column) */
-  .choice .romaji { display:block; font-size:18px; font-weight:600; margin-bottom:3px; }
-  .choice .kana  { display:block; font-size:18px; font-weight:700; color:#1e3a8a; }
+ /* FIXED: Romaji + Kana inline in options */
+  .choice .romaji { display:inline; font-size:18px; font-weight:600; margin-right:6px; }
+  .choice .kana  { display:inline; font-size:18px; font-weight:700; color:#1e3a8a; }
   .choice .romaji strong { font-weight:inherit; }
 </style>
 </head>
