--- a/index.html
+++ b/index.html
@@ -197,6 +197,13 @@
         <div class="sub">Embark on your journey to learn Japanese—vocabulary, kana, and quizzes.</div>
         <div class="greet">Learn vocabulary, kana, and track your progress. がんばって!</div>
         <div class="code-name">Coder: Krishan Kumar Jha</div>
+        <div class="code-name">Sugggestions/Queries? 🤔 </div>
+        <div class="code-name">
+  <a href="https://www.linkedin.com/in/KRISHAN-RS" target="_blank" style="display:inline-flex;align-items:center;text-decoration:none;font-weight:900;color:#0a66c2;">
+    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" alt="LinkedIn" width="24" height="24" style="margin-right:8px;vertical-align:middle;">
+    Contact me on LinkedIn
+  </a>
+</div>
       </div>
       <div class="logout-wrap">
         <button id="logoutBtn" class="logout-btn" title="Clear access">Logout</button>
@@ -2935,3 +2942,4 @@
 </script>
 </body>
 </html>
+
