--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
       <button id="authBtn" class="btn-prim">Enter</button>
     </div>
     <div id="authError" class="auth-error">Invalid password. Please try again.</div>
-    <div class="auth-footer">Protected by Krishan Kumar Jha • You may be asked again after a while for security.</div>
+    <div class="auth-footer">Protected by Krishan Kumar Jha • © All rights reserved.</div>
   </div>
 </div>
 
@@ -193,10 +193,10 @@
     <div class="hero">
       <div style="flex:1">
         <span class="badge">Explore • Learn • Master • 日本語</span>
-        <h1>Welcome, Krishan Kumar Jha 👋</h1>
+        <h1>Hello, Folks 👋</h1>
         <div class="sub">Embark on your journey to learn Japanese—vocabulary, kana, and quizzes.</div>
         <div class="greet">Learn vocabulary, kana, and track your progress. がんばって!</div>
-        <div class="code-name">Coder: Krishan Kumar Jha</div>
+        <div class="code-name">Developer: Krishan Kumar Jha</div>
         <div class="code-name">Sugggestions/Queries? 🤔 </div>
         <div class="code-name">
   <a href="https://www.linkedin.com/in/KRISHAN-RS" target="_blank" style="display:inline-flex;align-items:center;text-decoration:none;font-weight:900;color:#0a66c2;">
@@ -2942,4 +2942,5 @@
 </script>
 </body>
 </html>
+
 
